do not assume a specific input device

--- a/charts/ingress-nginx-nodeport/templates/daemonset.yaml
+++ b/charts/ingress-nginx-nodeport/templates/daemonset.yaml
@@ -32,8 +32,8 @@ spec:
           - /bin/sh
           - -c
           - |
-            iptables -t nat -A PREROUTING -i eth0 -p tcp --dport {{ .Values.ports.http}} -j REDIRECT --to-port {{ $ingressNginx.controller.service.nodePorts.http }}
-            iptables -t nat -A PREROUTING -i eth0 -p tcp --dport {{ .Values.ports.https }} -j REDIRECT --to-port {{ $ingressNginx.controller.service.nodePorts.https }}
+            iptables -t nat -A PREROUTING -p tcp --dport {{ .Values.ports.http}} -j REDIRECT --to-port {{ $ingressNginx.controller.service.nodePorts.http }}
+            iptables -t nat -A PREROUTING -p tcp --dport {{ .Values.ports.https }} -j REDIRECT --to-port {{ $ingressNginx.controller.service.nodePorts.https }}
             sleep infinity
           lifecycle:
             preStop:
@@ -42,24 +42,16 @@ spec:
                 - /bin/sh
                 - -c
                 - |
-                  iptables -t nat -D PREROUTING -i eth0 -p tcp --dport {{ .Values.ports.http}} -j REDIRECT --to-port {{ $ingressNginx.controller.service.nodePorts.http }}
-                  iptables -t nat -D PREROUTING -i eth0 -p tcp --dport {{ .Values.ports.https }} -j REDIRECT --to-port {{ $ingressNginx.controller.service.nodePorts.https }}
+                  iptables -t nat -D PREROUTING -p tcp --dport {{ .Values.ports.http}} -j REDIRECT --to-port {{ $ingressNginx.controller.service.nodePorts.http }}
+                  iptables -t nat -D PREROUTING -p tcp --dport {{ .Values.ports.https }} -j REDIRECT --to-port {{ $ingressNginx.controller.service.nodePorts.https }}
           securityContext:
             {{- toYaml .Values.securityContext | nindent 12 }}
           image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
           imagePullPolicy: {{ .Values.image.pullPolicy }}
-          ports:
-            - name: http
-              containerPort: 80
-              protocol: TCP
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
       {{- with .Values.nodeSelector }}
       nodeSelector:
-        {{- toYaml . | nindent 8 }}
-      {{- end }}
-      {{- with .Values.affinity }}
-      affinity:
         {{- toYaml . | nindent 8 }}
       {{- end }}
       {{- with .Values.tolerations }}
