[ingress-nginx-nodeport] make container privileged

--- a/charts/ingress-nginx-nodeport/values.yaml
+++ b/charts/ingress-nginx-nodeport/values.yaml
@@ -31,13 +31,9 @@ podAnnotations: {}
 podSecurityContext: {}
   # fsGroup: 2000
 
-securityContext: {}
-  # capabilities:
-  #   drop:
-  #   - ALL
-  # readOnlyRootFilesystem: true
-  # runAsNonRoot: true
-  # runAsUser: 1000
+securityContext:
+  readOnlyRootFilesystem: true
+  privileged: true
 
 resources:
   limits:
