[ingress-nginx-nodeport] no readonly root

--- a/charts/ingress-nginx-nodeport/values.yaml
+++ b/charts/ingress-nginx-nodeport/values.yaml
@@ -32,7 +32,7 @@ podSecurityContext: {}
   # fsGroup: 2000
 
 securityContext:
-  readOnlyRootFilesystem: true
+  #readOnlyRootFilesystem: true
   privileged: true
 
 resources:
