--- a/charts/keycloak-operator-legacy/templates/deployment.yaml
+++ b/charts/keycloak-operator-legacy/templates/deployment.yaml
@@ -35,3 +35,5 @@ spec:
                   fieldPath: metadata.name
             - name: OPERATOR_NAME
               value: "keycloak-operator"
+            - name: RELATED_IMAGE_KEYCLOAK
+              value: "{{ .Values.keycloak.image.registry }}/{{ .Values.keycloak.image.repository }}:{{ .Values.keycloak.image.tag | default .Chart.AppVersion }}"
